Resolved known outstanding issues, though not tested in i2b2 yet.